# numPDEs

./: README.en.md  README.md
Project1/code/: AdamBashforce.h  AdamBashforceTable  AdamMoulton.h  AdamMoultonTable  BDF.h  BDFTable  Function.h  InputFile  Makefile  ODESolver.cpp  Point.cpp  Point.h  Readme.md  RungeKutta.h  TimeIntegrator.h  TimeIntegratorFactory.h  getJacobian.m  testAB.cpp  testAM.cpp  testBDF.cpp  testPoint.cpp  testRK.cpp  testall  testall.cpp
Project1/story/: Euler24000.m  Makefile  RungeKutta6000.m  Trajectory_1.m  Trajectory_2.m  story.tex
Project2/code/: FMG.h  Function.h  Makefile  Mesh.h  Meshtype1.h  VCycle.h  VCycleerror.txt  VCycleerror1024.txt  VCycleerror128.txt  VCycleerror512.txt  main.cpp  testFMG.cpp  testMesh.cpp  testVCycle.cpp  testWeightedJacob.cpp
Project2/documents/: Makefile  answer.tex  design.tex  math.tex
Project2/documents/算例1/: Result.m  VCycleerror1024.txt  VCycleerror128.txt  VCycleerror256.txt  VCycleerror512.txt
Project2/documents/算例2/: Result.m  VCycleerror256.txt
Project3/: CMakeLists.txt
Project3/Core/: Box.h  Config.cpp  Config.h  Curve.cpp  RectDomain.h  Wrapper_LAPACKE.h  static_for.h
Project3/src/: BoundaryFiller.h  CMakeLists.txt  FuncFiller.h  Interpolation.h  Laplacian.h  MGSolver.cpp  MGSolver.h  PoissonDirectSolver.h  Restrictor.h  ScalarFunction.h  Smoother.h  WeightedJacobi.h
Project3/src/Core/: CMakeLists.txt  Curve.h  Interval.h  Polynomial.h  RowSparse.h  SolveTri.h  Tensor.h  TensorExpr.h  TensorSlice.h  Vec.h  VecCompare.h  Wrapper_OpenMP.cpp  Wrapper_OpenMP.h  numlib.cpp  numlib.h
Project3/src/MultiGrid/: BoundaryFiller.h  CMakeLists.txt  FuncFiller.h  Interpolation.h  Laplacian.h  MGFactory.h  MGSolver.cpp  MGSolver.h  MPI_MultiGrid.h  Restrictor.h  TestMultigird.h  WeightedJacobi.h
Project3/test/: CMakeLists.txt  Functions.h  testLaplacian.cpp  testOperator.cpp  testVCycle.cpp
